# omdena_hyd_hr_chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml
data/chromadb/382c8246-3f65-4074-8753-41199cc5882a/: index_metadata.pickle
data/chromadb/7c6a57e5-26a4-49be-abf3-983d91716ad2/: index_metadata.pickle
data/originals/: Team 3- Dataset 1.csv
data/processed/: combined.csv
data/resume/: Customer Service Manager 2.csv  Customer Service Manager 2.txt  customer service agent.csv  customer service manager.csv  customer service manager.txt  marketing manager 2.csv  marketing manager 2.txt  marketing manager.csv  marketing manager.txt  medical assistant.csv  medical assistant.txt  nurse.csv  nurse.txt  nurse2.csv  nurse2.txt  sales manager 2.csv  sales manager 2.txt  sales manager 3.csv  sales manager 3.txt  sales manager 4.csv  sales manager 4.txt  sales manager.csv  sales manager.txt
src/: main.py
src/utils/: common.py  generate_questions.py  vectordb_operations.py
