[tool.poetry]
name = "omdena-hyd-hr-chatbot"
version = "0.1.0"
description = "LLM Based HR Round prep chatbot"
authors = ["Abhishek Dutta <abhishek.dutta1337@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
streamlit = "^1.29.0"
huggingface-hub = "^0.19.4"
pytest = "^7.4.3"
openai = "^1.5.0"
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.2"
ipykernel = "^6.27.1"
chromadb = "^0.4.20"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
